--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   google_fonts: ^5.1.0
   flutter_reorderable_grid_view: ^4.0.0
   side_sheet: ^1.0.4
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  pretty_qr_code: ^2.0.3
 
 dev_dependencies:
   flutter_test:
