수정 controller 안됨

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   pretty_qr_code: ^2.0.3
+  firebase_core: ^2.14.0
+  firebase_auth: ^4.6.3
+  cloud_firestore: ^4.8.2
+  share_plus: ^7.0.2
 
 dev_dependencies:
   flutter_test:
