--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   firebase_auth: ^4.6.3
   cloud_firestore: ^4.8.2
   share_plus: ^7.0.2
+  firebase_pagination: ^3.0.0
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   flutter_test:
